<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="95dp"
        android:paddingVertical="240dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button1h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arithmetic_operations" />

        <Button
            android:id="@+id/button2h"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/trigonometry_operations" />

        <Button
            android:id="@+id/button3h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_math_functions"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/credits"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
